# bmail

./: .gitignore  Cargo.toml  README.md  bmail.toml.example
src/: conf.rs  dm.rs  errors.rs  key.rs  lib.rs  main.rs  message.rs  ui.rs
